docs/refactoring/reports/test-sample-result.txt

 NX   Running target test for 4 projects:

- auth-service
- tenant-service
- accounting-service
- personnel-service

With additional flags:
  --coverage=true



> nx run tenant-service:test --coverage

[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m tenant-service [39m[27m[0m [2mapps/system/tenant-service/src/app/tenant/[22m[1mtenant.service.spec.ts[22m
  [1m● [22mTest suite failed to run

    [96mapps/system/tenant-service/src/app/tenant/tenant.service.spec.ts[0m:[93m47[0m:[93m15[0m - [91merror[0m[90m TS2339: [0mProperty 'tenant' does not exist on type 'PrismaService'.

    [7m47[0m       (prisma.tenant.findUnique as jest.Mock).mockResolvedValue(null);
    [7m  [0m [91m              ~~~~~~[0m
    [96mapps/system/tenant-service/src/app/tenant/tenant.service.spec.ts[0m:[93m48[0m:[93m15[0m - [91merror[0m[90m TS2339: [0mProperty 'tenant' does not exist on type 'PrismaService'.

    [7m48[0m       (prisma.tenant.create as jest.Mock).mockResolvedValue(createdTenant);
    [7m  [0m [91m              ~~~~~~[0m
    [96mapps/system/tenant-service/src/app/tenant/tenant.service.spec.ts[0m:[93m53[0m:[93m21[0m - [91merror[0m[90m TS2339: [0mProperty 'tenant' does not exist on type 'PrismaService'.

    [7m53[0m       expect(prisma.tenant.create).toHaveBeenCalledWith({
    [7m  [0m [91m                    ~~~~~~[0m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        18.225 s
[2mRan all test suites[22m[2m.[22m

> nx run personnel-service:test --coverage

[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m personnel-service [39m[27m[0m [2mapps/hr/personnel-service/src/app/employee/[22m[1memployee.service.spec.ts[22m
  [1m● [22mTest suite failed to run

    [96mapps/hr/personnel-service/src/app/employee/employee.service.spec.ts[0m:[93m44[0m:[93m13[0m - [91merror[0m[90m TS2339: [0mProperty 'employee' does not exist on type 'PrismaService'.

    [7m44[0m     (prisma.employee.create as jest.Mock).mockResolvedValue(created);
    [7m  [0m [91m            ~~~~~~~~[0m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        18.788 s
[2mRan all test suites[22m[2m.[22m

> nx run auth-service:test --coverage

[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m auth-service [39m[27m[0m [2mapps/system/auth-service/src/app/auth/[22m[1mauth.service.spec.ts[22m
  [1m● [22mTest suite failed to run

    [1m[31mJest encountered an unexpected token[39m[22m

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see [4mhttps://jestjs.io/docs/ecmascript-modules[24m for how to enable it.
     • If you are trying to use TypeScript, see [4mhttps://jestjs.io/docs/getting-started#using-typescript[24m
     • To have some of your "node_modules" files transformed, you can specify a custom [1m"transformIgnorePatterns"[22m in your config.
     • If you need a custom transformation, specify a [1m"transform"[22m option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the [1m"moduleNameMapper"[22m config option.

    You'll find more details and examples of these config options in the docs:
    [36mhttps://jestjs.io/docs/configuration[39m
    For information about custom transformations, see:
    [36mhttps://jestjs.io/docs/code-transformation[39m

    [1m[31mDetails:[39m[22m

    /data/all-erp/node_modules/.pnpm/uuid@13.0.0/node_modules/uuid/dist-node/index.js:1
    export { default as MAX } from './max.js';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 1 |[39m [36mimport[39m { [33mInjectable[39m[33m,[39m [33mInject[39m[33m,[39m [33mLogger[39m } [36mfrom[39m [32m'@nestjs/common'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m { v4 [36mas[39m uuidv4 } [36mfrom[39m [32m'uuid'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m [36mimport[39m { [33mOutboxRepository[39m } [36mfrom[39m [32m'./outbox.repository.interface'[39m[33m;[39m
     [90m 4 |[39m
     [90m 5 |[39m [36mexport[39m [36mconst[39m [33mOUTBOX_REPO[39m [33m=[39m [32m'OUTBOX_REPOSITORY'[39m[33m;[39m[0m

      [2mat Runtime.createScriptFromCode ([22m../../../node_modules/.pnpm/jest-runtime@30.2.0/node_modules/jest-runtime/build/index.js[2m:1318:40)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/lib/event/event.service.ts[2m:2:1)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/lib/event/event.module.ts[2m:3:1)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/index.ts[2m:16:1)[22m
      [2mat Object.require ([22msrc/prisma.service.ts[2m:3:1)[22m
      [2mat Object.require ([22msrc/app/auth/auth.service.ts[2m:3:1)[22m
      [2mat Object.<anonymous> ([22m[0m[36msrc/app/auth/auth.service.spec.ts[39m[0m[2m:2:1)[22m

[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m auth-service [39m[27m[0m [2mapps/system/auth-service/src/app/auth/[22m[1mauth.controller.spec.ts[22m
  [1m● [22mTest suite failed to run

    [1m[31mJest encountered an unexpected token[39m[22m

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see [4mhttps://jestjs.io/docs/ecmascript-modules[24m for how to enable it.
     • If you are trying to use TypeScript, see [4mhttps://jestjs.io/docs/getting-started#using-typescript[24m
     • To have some of your "node_modules" files transformed, you can specify a custom [1m"transformIgnorePatterns"[22m in your config.
     • If you need a custom transformation, specify a [1m"transform"[22m option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the [1m"moduleNameMapper"[22m config option.

    You'll find more details and examples of these config options in the docs:
    [36mhttps://jestjs.io/docs/configuration[39m
    For information about custom transformations, see:
    [36mhttps://jestjs.io/docs/code-transformation[39m

    [1m[31mDetails:[39m[22m

    /data/all-erp/node_modules/.pnpm/uuid@13.0.0/node_modules/uuid/dist-node/index.js:1
    export { default as MAX } from './max.js';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m 1 |[39m [36mimport[39m { [33mInjectable[39m[33m,[39m [33mInject[39m[33m,[39m [33mLogger[39m } [36mfrom[39m [32m'@nestjs/common'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m { v4 [36mas[39m uuidv4 } [36mfrom[39m [32m'uuid'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 3 |[39m [36mimport[39m { [33mOutboxRepository[39m } [36mfrom[39m [32m'./outbox.repository.interface'[39m[33m;[39m
     [90m 4 |[39m
     [90m 5 |[39m [36mexport[39m [36mconst[39m [33mOUTBOX_REPO[39m [33m=[39m [32m'OUTBOX_REPOSITORY'[39m[33m;[39m[0m

      [2mat Runtime.createScriptFromCode ([22m../../../node_modules/.pnpm/jest-runtime@30.2.0/node_modules/jest-runtime/build/index.js[2m:1318:40)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/lib/event/event.service.ts[2m:2:1)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/lib/event/event.module.ts[2m:3:1)[22m
      [2mat Object.require ([22m../../../libs/shared/infra/src/index.ts[2m:16:1)[22m
      [2mat Object.require ([22msrc/prisma.service.ts[2m:3:1)[22m
      [2mat Object.require ([22msrc/app/auth/auth.service.ts[2m:3:1)[22m
      [2mat Object.require ([22msrc/app/auth/auth.controller.ts[2m:2:1)[22m
      [2mat Object.<anonymous> ([22m[0m[36msrc/app/auth/auth.controller.spec.ts[39m[0m[2m:2:1)[22m

[1mTest Suites: [22m[1m[31m2 failed[39m[22m, 2 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        31.351 s
[2mRan all test suites[22m[2m.[22m

> nx run accounting-service:test --coverage

[0m[7m[1m[31m FAIL [39m[22m[27m[0m [0m[7m[37m accounting-service [39m[27m[0m [2mapps/finance/accounting-service/src/app/journal/[22m[1mjournal.service.spec.ts[22m
  [1m● [22mTest suite failed to run

    [96mapps/finance/accounting-service/src/app/journal/journal.service.spec.ts[0m:[93m45[0m:[93m13[0m - [91merror[0m[90m TS2339: [0mProperty 'journalEntry' does not exist on type 'PrismaService'.

    [7m45[0m     (prisma.journalEntry.create as jest.Mock).mockResolvedValue({ id: 'je-1' });
    [7m  [0m [91m            ~~~~~~~~~~~~[0m

[1mTest Suites: [22m[1m[31m1 failed[39m[22m, 1 total
[1mTests:       [22m0 total
[1mSnapshots:   [22m0 total
[1mTime:[22m        9.603 s
[2mRan all test suites[22m[2m.[22m



 NX   Running target test for 4 projects failed

Failed tasks:

- tenant-service:test
- personnel-service:test
- auth-service:test
- accounting-service:test

